# QT_OSG_VIEWER

./: CMakeLists.txt  README.md  conanfile.py
res/: E9sJ_yZUYAAl1i_.jfif
src/: CMakeLists.txt  main.cpp  my_qt.ui  project_1.cpp  project_1.h
src/Proj_1/: CMakeLists.txt
src/Proj_1/UI/: MainWindow.ui  testDialog.ui  testwidget.ui
src/Proj_1/header/: testWidget.h
src/Proj_1/mainwindow/: MainWindow.cpp  MainWindow.h  TestDialog.cpp  TestDialog.h
src/Proj_1/src/: MainWindow.cpp  testWidget.cpp
src/Proj_1/testwindow/: me.cpp  me.h  testWindow.cpp  testWindow.h
src/UI/mainwindow/: MainWindow.cpp  MainWindow.h
src/UI/ui/: MainWindow.ui
src/Utilits/: utils.cpp  utils.h
